[package]
name = "rsure"
version = "0.9.0"
authors = ["David Brown <davidb@davidb.org>"]
description = """
Rsure captures hashes and metadata about a tree of files, and can
later verify these hashes and metadata to determine if the files have
changed.  It supports incremental updates, and includes an standalone
executable for scanning and checking trees.
"""
license = "MIT"
readme = "README.rst"
repository = "https://github.com/d3zd3z/rsure"
edition = "2018"

exclude = [
    "2sure.*.gz"
]

[dependencies]
chrono = "0.4"
crossbeam = "0.7"
data-encoding = "2.1.1"
failure = "0.1.1"
failure_derive = "0.1.1"
flate2 = "1.0"
lazy_static = "1.4"
libc = "0.2.11"
log = "0.4.6"  # 0.4.6 needed to fix problem with named macro imports.
naming = { path = "naming" }
num_cpus = "1.10"
openssl = "0.10"
regex = "1.0"
rusqlite = "0.20"
structopt = "0.3"
tempdir = "0.3"
time = "0.1"
weave = { path = "weave", version = "0.2.0" }

# This will go away
env_logger = "0.6"

[[bin]]
name = "rsure"
test = false
doc = false
