[package]
name = "rsure-naming"
version = "0.1.0"
authors = ["David Brown <davidb@davidb.org>"]
edition = "2018"
description = """
rsure-naming implements a simple naming convention used by the 'rsure'
crate.  It manages an associated set of files, typically a data file,
a backup file, and zero or more temporary files.
"""

[dependencies]
failure = "0.1.5"
flate2 = "1.0"
log = "0.4.6"
