[package]
name = "weave"
version = "0.2.1"
authors = ["davidb"]
description = """
Weave delta file storage.  Inspired by the storage format of SCCS,
this crate allows multiple revisions of a file to be stored
efficiently in a single file.
"""
license = "MIT"
readme = "README.rst"
repository = "https://github.com/d3zd3z/rsure"

[dependencies]
failure = "0.1.1"
log = "0.4"
regex = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"

[dev-dependencies]
env_logger = "0.5"
rand = "0.4"
tempdir = "0.3"

# Optimize the tests so they don't take too long
[profile.test]
opt-level = 3
