[package]
name = "weave"
version = "0.4.0-dev"
authors = ["davidb"]
description = """
Weave delta file storage.  Inspired by the storage format of SCCS,
this crate allows multiple revisions of a file to be stored
efficiently in a single file.
"""
license = "MIT"
readme = "README.rst"
repository = "https://github.com/d3zd3z/rsure"
edition = "2018"

[dependencies]
log = "0.4"
regex = "1.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
zstd = "0.10"

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"
tempdir = "0.3"

# Optimize the tests so they don't take too long
[profile.test]
opt-level = 3
